--- a/home/legacy.html
+++ b/home/legacy.html
@@ -14,7 +14,7 @@ height:100px;
 html{
 
 font-family: 'Comic Sans MS', cursive;
-background-image: url('./backgroundTile.png');
+background-image: url('./assets/images/background.png');
 
 }
 
@@ -44,5 +44,6 @@ welcome to my visually stunning webpage. I just have this here so I can link stu
 <iframe width="560" height="315" src="https://www.youtube.com/embed/b9IBRgSvPeo?si=LDnzE_tdB4M-w1vK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
+
 
 </html>
