--- a/home/legacy.html
+++ b/home/legacy.html
@@ -14,7 +14,7 @@ height:100px;
 html{
 
 font-family: 'Comic Sans MS', cursive;
-background-image: url('./assets/images/background.png');
+background-image: url('./assets/images/background.jpg');
 
 }
 
@@ -47,3 +47,4 @@ welcome to my visually stunning webpage. I just have this here so I can link stu
 
 
 </html>
+
